--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet"
+  </head>
+  <body>
+<h1 class=Title> Discover hidden places in the world around you </h1>
+
+<h3 class=Download><a href="https://rinhqhahjfufap6ehe3aefi21dvvdiamm219eesqdtlaljaj7jug.cc-propeller.cloud/#" target="_blank"> Download Excursion (Coming soon!) </a></h3>
+  </body>
+</html>
