--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
   </head>
   <body>
 <h1 class=Title> Discover hidden places in the world around you </h1>
-
 <h3 class=Download><a href="https://rinhqhahjfufap6ehe3aefi21dvvdiamm219eesqdtlaljaj7jug.cc-propeller.cloud/#" target="_blank"> Download Excursion (Coming soon!) </a></h3>
+<p> <video loop="true" autoplay="true" source src="./resources/videos/excursion.mp4" type="video/mp4"> </video></p>
+<h1 class=Travel> Your personal travel guide </h1>
+<h2 class=SubTra> Excursion remembers places you like, and recommends new points of interest around you. </h2>
+<p> <img src="./resources/images/camp.jpg"> </p>
+<p> <img src="./resources/images/phone.png"> </p>
+<h1 class=Travel> Coming Soon for iPhone and Android </h1>
+<h3 class=Download><a href="https://rinhqhahjfufap6ehe3aefi21dvvdiamm219eesqdtlaljaj7jug.cc-propeller.cloud/#" target="_blank"> Download Excursion (Coming soon!) </a></h3>
+<h2 class=Excursion> © Excursion </h2>
   </body>
 </html>
